--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,12 @@
 <body>
   <app-root></app-root>
    <!-- Mainly scripts -->
+
+   <script type="application/javascript">
+    var global = window;
+  </script>
+  
+
    <script src="assets/js/jquery-3.1.1.min.js"></script>
    <script src="assets/js/bootstrap.min.js"></script>
    <script src="assets/js/plugins/metisMenu/jquery.metisMenu.js"></script>
